--- a/style.css
+++ b/style.css
@@ -295,8 +295,9 @@ button:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px 0 20px 20px;
+    margin: 20px auto;
     width: 100%;
+    text-align: left;
     max-width: 600px; /* Adjust the max width as needed */
 }
 
