--- a/style.css
+++ b/style.css
@@ -697,3 +697,25 @@ button:hover {
 .hidden {
     display: none;
 }
+
+/* MAIN PAGE ABOUT US */
+.experiential-addons {
+    background-color: #f9f9f9;
+    padding: 20px;
+    text-align: center;
+    margin-bottom: 20px;
+    border-top: 2px solid #ccc;
+    border-bottom: 2px solid #ccc;
+}
+
+.experiential-addons .content h2 {
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.experiential-addons .content p {
+    font-size: 1rem;
+    color: #555;
+    line-height: 1.5;
+}
